RESOLVED FIXED303735
mpadded lspace attribute incorrectly positions content in RTL direction
https://bugs.webkit.org/show_bug.cgi?id=303735
Summary mpadded lspace attribute incorrectly positions content in RTL direction
Ahmad Saleem
Reported 2025-12-08 01:03:13 PST
ssia - it fixes WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-08 01:03:20 PST
Ahmad Saleem
Comment 2 2025-12-08 01:05:39 PST
EWS
Comment 3 2025-12-08 04:41:01 PST
Committed 304087@main (d67021780499): <https://commits.webkit.org/304087@main> Reviewed commits have been landed. Closing PR #55021 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.