mpadded lspace attribute incorrectly positions content in RTL direction https://bugs.webkit.org/show_bug.cgi?id=303735 rdar://166045517

Reviewed by Frédéric Wang.

In RTL mode, lspace should add space on the inline-start (physical right)
side. The previous implementation added in 303070@main simply negated lspace,
which incorrectly positioned content at the left edge instead of accounting
for the box width and content width.

For RTL with lspace="25px", width="150px", and content width 75px:
- Content should end 25px from the right edge
- Content starts at: 150 - 25 - 75 = 50px from left

The fix calculates RTL inline shift as (width - contentWidth - lspace())
to properly position content relative to the box's right edge.

* Source/WebCore/rendering/mathml/RenderMathMLPadded.cpp:
(WebCore::RenderMathMLPadded::layoutBlock):
* LayoutTests/TestExpectations: Progression

Canonical link: https://commits.webkit.org/304087@main